# Helix

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: audit.rs  openapi.rs  pairing.rs  rest.rs  websocket.rs
apps/api/tests/: federation_e2e.rs
apps/cli/src/: main.rs
apps/worker/: Dockerfile  requirements.txt
apps/worker/core/: di_container.py  enhanced_logging.py  event_bus.py  exceptions_unified.py  rust_bridge.py
apps/worker/tests/: test_analytics.py  test_budget_persistence.py  test_composio.py  test_dependency_resolver.py  test_event_router.py  test_feedback.py  test_learning_optimizer.py  test_middleware.py  test_reports.py  (+7 more)
config/: helix.toml
infra/: docker-compose.yml
migrations/: 001_initial.sql  002_keychain.sql  003_agentic.sql  005_relay_safeguards.sql  008_relay.sql  009_keychain_security.sql  011_consumer_profiles.sql  015_contact_identity.sql  016_approval_queue.sql  018_breach_alert_dedup.sql  020_credential_acls.sql  021_shamir_rotation.sql  022_adapter_poll_state.sql  023_conversations.sql  025_public_shares.sql
python/: pyproject.toml
python/core/: __init__.py  di_container.py  exceptions_unified.py  rust_bridge.py
python/core/analytics/: analytics_engine.py  report_generator.py  scheduled_actions.py
python/core/api/: helix_api.py
python/core/composio/: composio_bridge.py
python/core/learning/: learning_optimizer.py  rl_integration.py
python/core/llm/: __init__.py  intelligent_llm_router.py
python/core/llm/providers/: __init__.py  base.py
python/core/mcp/: __init__.py  server.py  tools.py
python/core/middleware/: budget_tracker.py
python/core/orchestration/: unified_orchestrator.py
python/core/reasoning/: agentic_reasoner.py  historical_learning.py  multi_agent_collaboration.py  process_reward_model.py
python/core/scheduling/: __init__.py  dependency_resolver.py  scheduler_coordinator.py
python/core/sources/: __init__.py  rss_feed.py  url_scraper.py
python/core/swarms/: __init__.py  base_swarm.py  code_review_swarm.py  debugging_swarm.py  deployment_swarm.py  shared_state.py  swarm_orchestrator.py
python/tests/: test_budget_tracker.py  test_di_and_event_bus.py  test_helix_api.py  test_integration.py  test_llm_router.py  test_mcp.py  test_notification_service.py  test_orchestrator_integration.py  test_rust_bridge.py  test_rust_scheduler_integration.py  test_scheduled_actions.py  test_scheduler_coordinator.py
rust/: Cargo.toml  Dockerfile
rust/crates/hx-cli/: Cargo.toml
rust/crates/hx-cli/src/: main.rs
rust/crates/hx-cli/src/commands/: backup.rs  chat.rs  encrypt.rs  export.rs  graph.rs  keychain.rs  mcp.rs  mod.rs  profile.rs  recall.rs  search.rs  server.rs  stats.rs  store.rs
rust/crates/hx-core/src/: credentials.rs  error.rs  lib.rs  traits.rs
rust/crates/hx-core/src/model/: keychain.rs  mod.rs  pairing.rs  policy.rs
rust/crates/hx-core/src/model/_model_wip/: chronicle.rs  intent.rs  keychain.rs  mod.rs  proactive.rs
rust/crates/hx-engine/: Cargo.toml
rust/crates/hx-engine/src/: ai_autotag.rs  backlinks.rs  chunking.rs  config.rs  engine.rs  ingest.rs  insight.rs  intent.rs  intent_check.rs  keychain.rs  lib.rs  llm.rs  llm_local.rs  metrics_collector.rs  model_manager.rs  planner.rs  proxy.rs  query_rewrite.rs  recall.rs  recurrence.rs  reflection.rs  relay.rs  scheduling.rs  secure_enclave.rs  skills.rs
rust/crates/hx-engine/src/adapters/: cli_chat.rs  email.rs  matrix.rs  mod.rs  webhook.rs
rust/crates/hx-engine/src/channel/: normalize.rs
rust/crates/hx-engine/src/engine/: consumers.rs  mcp_connectors.rs  proxy.rs  test_utils.rs
rust/crates/hx-engine/src/import/: obsidian.rs
rust/crates/hx-engine/src/jobs/: queue.rs  worker.rs
rust/crates/hx-engine/src/multimodal/: docx.rs  image.rs  mod.rs  pdf.rs  structured_data.rs
rust/crates/hx-engine/src/notifications/: alerts.rs  outbound.rs  router.rs
rust/crates/hx-engine/src/notifications/channels/: email.rs  mod.rs  webhook.rs
rust/crates/hx-engine/src/sources/: github.rs  mod.rs  rss.rs  url_scraper.rs
rust/crates/hx-engine/src/sync/: clock.rs
rust/crates/hx-engine/src/tunnel/: custom.rs  tailscale.rs
rust/crates/hx-engine/src/workflow/: executor.rs  parser.rs
rust/crates/hx-graph/src/: store.rs  traversal.rs
rust/crates/hx-index/src/: hybrid.rs  tantivy_index.rs
rust/crates/hx-mcp/: Cargo.toml
rust/crates/hx-mcp/.fastembed_cache/models--Xenova--bge-small-en-v1.5/refs/: main
rust/crates/hx-mcp/src/: auth.rs  lib.rs  protocol.rs  server.rs
rust/crates/hx-plugin/src/: abi.rs  host.rs  lib.rs  manifest.rs  registry.rs  runtime.rs  sandbox.rs
rust/crates/hx-scheduler/: Cargo.toml
rust/crates/hx-scheduler/src/: builder.rs  dag.rs  error.rs  lib.rs  tracker.rs
rust/crates/hx-server/: Cargo.toml  build.rs
rust/crates/hx-server/.fastembed_cache/models--Xenova--bge-small-en-v1.5/snapshots/ea104dacec62c0de699686887e3f920caeb4f3e3/onnx/: model.onnx
rust/crates/hx-server/src/: adapter_poll.rs  auth.rs  email.rs  grpc.rs  lib.rs  limits.rs  metrics.rs  rest.rs  state.rs  validation.rs
rust/crates/hx-server/src/rest/: adapters.rs  ai_proxy.rs  attachments.rs  audit_api.rs  consumers.rs  contact_identity.rs  exchange.rs  feedback.rs  google_calendar.rs  jobs.rs  keychain.rs  models.rs  notifications.rs  oauth.rs  outbound_webhooks.rs  permissions.rs  policies.rs  profile.rs  safeguards.rs  scheduler.rs  sources.rs  sync.rs  tunnels.rs  voice.rs  workflows.rs
rust/crates/hx-server/tests/: api_integration.rs
rust/crates/hx-storage/: Cargo.toml
rust/crates/hx-storage/src/: crypto.rs  keychain.rs  lib.rs  sealed_runtime.rs  vector.rs
rust/migrations/: 004_exchange.sql  006_feedback.sql  007_autonomy.sql  010_profile.sql  012_access_policies.sql  013_proxy_audit.sql  014_conflicts.sql  017_shamir.sql  019_metadata_encryption.sql  024_plans.sql  026_node_comments.sql  027_mcp_connectors.sql  028_sealed_node_payloads.sql
rust/proto/helix/v1/: helix.proto
scripts/: health-check.sh  start.sh  stop.sh
(+66 files in other folders)
