[package]
name = "hx-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DAG-based task scheduler with quality gates, adaptive retry, and predictive preview"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
